# AzSphereEdvice

./: .gitignore  CMakeLists.txt  README.md  app_manifest.json
Includes/: BMI160.h  Custom.h  EdVice.h  GPIOControl.h
Sources/: BMI160.c  GPIOControl.c
demo_threadx/: demo_threadx.c  rtcoremain.c
